--- a/ArterialPatternGeneration_beta/.classpath
+++ b/ArterialPatternGeneration_beta/.classpath
@@ -2,8 +2,8 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
-	<classpathentry kind="lib" path="C:/Users/Yu/Documents/GitHub/CleanPath/ArterialPatternGeneration_beta/library/classes12.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Yu/Documents/GitHub/CleanPath/ArterialPatternGeneration_beta/library/ojdbc14.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Yu/Documents/GitHub/CleanPath/ArterialPatternGeneration_beta/library/sdoapi.jar"/>
+	<classpathentry kind="lib" path="library/classes12.jar"/>
+	<classpathentry kind="lib" path="library/ojdbc14.jar"/>
+	<classpathentry kind="lib" path="library/sdoapi.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
