--- a/PatternGeneration/.classpath
+++ b/PatternGeneration/.classpath
@@ -2,10 +2,10 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
-	<classpathentry kind="lib" path="/Users/Sun/Documents/workspace/CleanPath/PatternGeneration/library/classes12.jar"/>
-	<classpathentry kind="lib" path="/Users/Sun/Documents/workspace/CleanPath/PatternGeneration/library/jcommon-1.0.17.jar"/>
-	<classpathentry kind="lib" path="/Users/Sun/Documents/workspace/CleanPath/PatternGeneration/library/jfreechart-1.0.14.jar"/>
-	<classpathentry kind="lib" path="/Users/Sun/Documents/workspace/CleanPath/PatternGeneration/library/ojdbc14.jar"/>
-	<classpathentry kind="lib" path="/Users/Sun/Documents/workspace/CleanPath/PatternGeneration/library/sdoapi.jar"/>
+	<classpathentry kind="lib" path="C:/Users/clearp/Documents/GitHub/CleanPath/PatternGeneration/library/classes12.jar"/>
+	<classpathentry kind="lib" path="C:/Users/clearp/Documents/GitHub/CleanPath/PatternGeneration/library/jcommon-1.0.17.jar"/>
+	<classpathentry kind="lib" path="C:/Users/clearp/Documents/GitHub/CleanPath/PatternGeneration/library/jfreechart-1.0.14.jar"/>
+	<classpathentry kind="lib" path="C:/Users/clearp/Documents/GitHub/CleanPath/PatternGeneration/library/ojdbc14.jar"/>
+	<classpathentry kind="lib" path="C:/Users/clearp/Documents/GitHub/CleanPath/PatternGeneration/library/sdoapi.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
