--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,35 @@
 *.zip
 
 *.class
+
+*.class
+
+ArterialPatternGeneration_alpha/bin/Objects/DistanceCalculator.class
+
+ArterialPatternGeneration_alpha/bin/Objects/inputConfig.class
+
+ArterialPatternGeneration_alpha/bin/RoadPattern/RoadPatternGeneration.class
+
+ArterialPatternGeneration_alpha/bin/cleanTable/CleanTable.class
+
+ArterialPatternGeneration_alpha/bin/highwayPattern/AdjListPattern.class
+
+ArterialPatternGeneration_alpha/bin/highwayPattern/CityArea.class
+
+ArterialPatternGeneration_alpha/bin/highwayPattern/EdgeSensorKML2.class
+
+ArterialPatternGeneration_alpha/bin/highwayPattern/HighwayPatternCube.class
+
+ArterialPatternGeneration_alpha/bin/highwayPattern/EdgeSensorKML.class
+
+ArterialPatternGeneration_alpha/bin/highwayPattern/highwayPatternGeneration.class
+
+ArterialPatternGeneration_alpha/bin/highwayPattern/highwayPatternGeneration2.class
+
+ArterialPatternGeneration_alpha/bin/insertDatabase/InsertDatabase.class
+
+PatternGeneration/bin/objects/DistanceCalculator.class
+
+PatternGeneration/bin/objects/inputConfig.class
+
+PatternGeneration/bin/pattern/HighwayPatternGeneration.class
