--- a/ArterialPatternGeneration_alpha/.classpath
+++ b/ArterialPatternGeneration_alpha/.classpath
@@ -2,10 +2,10 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
-	<classpathentry kind="lib" path="C:/Users/clearp/Documents/GitHub/CleanPath/ArterialPatternGeneration_alpha/library/classes12.jar"/>
-	<classpathentry kind="lib" path="C:/Users/clearp/Documents/GitHub/CleanPath/ArterialPatternGeneration_alpha/library/jcommon-1.0.17.jar"/>
-	<classpathentry kind="lib" path="C:/Users/clearp/Documents/GitHub/CleanPath/ArterialPatternGeneration_alpha/library/jfreechart-1.0.14.jar"/>
-	<classpathentry kind="lib" path="C:/Users/clearp/Documents/GitHub/CleanPath/ArterialPatternGeneration_alpha/library/ojdbc14.jar"/>
-	<classpathentry kind="lib" path="C:/Users/clearp/Documents/GitHub/CleanPath/ArterialPatternGeneration_alpha/library/sdoapi.jar"/>
+	<classpathentry kind="lib" path="../library/classes12.jar"/>
+	<classpathentry kind="lib" path="../library/jcommon-1.0.17.jar"/>
+	<classpathentry kind="lib" path="../library/jfreechart-1.0.14.jar"/>
+	<classpathentry kind="lib" path="../library/ojdbc14.jar"/>
+	<classpathentry kind="lib" path="../library/sdoapi.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
